--- a/challenge.html
+++ b/challenge.html
@@ -375,13 +375,13 @@
               </div>
               <div class="col-xs-1 authornames">
                 <a href="https://www.linkedin.com/in/jaewoo-jang-a6909968" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="http://svl.stanford.edu/igibson/images/sanjana.jpg" class="img-circle img-responsive">
                   <font size="3">Sanjana Srivastava</font>
                 </a>
               </div>
               <div class="col-xs-1 authornames">
                 <a href="https://www.linkedin.com/in/jaewoo-jang-a6909968" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="https://pbs.twimg.com/profile_images/1291846610414997505/J5QTYSTN_400x400.jpg" class="img-circle img-responsive">
                   <font size="3">Michael Lingelbach</font>
                 </a>
               </div>
