--- a/challenge.html
+++ b/challenge.html
@@ -401,19 +401,19 @@
               </div>
               <div class="col-xs-1 authornames">
                 <a href="https://ai.google/research/people/AlexanderToshev/" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="https://www.cemgokmen.com/assets/img/bio-photo.jpg" class="img-circle img-responsive">
                   <font size="3">Cem Gokmen</font>
                 </a>
               </div>
               <div class="col-xs-1 authornames">
                 <a href="https://research.google/people/author35466/" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="https://lh3.googleusercontent.com/proxy/fcP9KYlqZ4Tw93t5nJZuWz9iooVwE8iFt3jtBmRyf9SwIHi-5SuD8AidnoRE2xG2dXugWtE_H84ckboMHDj1ZFNs" class="img-circle img-responsive">
                   <font size="3">Shyamal Buch</font>
                 </a>
               </div>
               <div class="col-xs-1 authornames">
                 <a href="https://research.google/people/author35466/" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="https://ckllab.stanford.edu/sites/g/files/sbiybj15216/f/styles/large-scaled/public/karen_headshot_2019_jpeg.png?itok=mB01xRJB" class="img-circle img-responsive">
                   <font size="3">Karen Liu</font>
                 </a>
               </div>
@@ -426,19 +426,19 @@
               </div>
               <div class="col-xs-1 authornames">
                 <a href="http://cvgl.stanford.edu/silvio/" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="https://bingschool.stanford.edu/sites/bingschool/files/styles/hs_medium_square_360x360/public/media/capx/gweon1582179036530.jpg?h=1641edec&itok=a3TcTu8Y" class="img-circle img-responsive">
                   <font size="3">Hyowen Gweon</font>
                 </a>
               </div>
               <div class="col-xs-1 authornames">
                 <a href="http://cvgl.stanford.edu/silvio/" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="https://jiajunwu.com/images/Jiajun_Wu.jpg" class="img-circle img-responsive">
                   <font size="3">Jiajun Wu</font>
                 </a>
               </div>
               <div class="col-xs-1 authornames">
                 <a href="http://cvgl.stanford.edu/silvio/" align="middle">
-                  <img src="http://svl.stanford.edu/assets/img/square/chengshu.jpg" class="img-circle img-responsive">
+                  <img src="https://engineering.stanford.edu/sites/default/files/styles/large-square/public/9818d36da9c8e04dc45603a690b1e7ce.jpg?itok=s_I8jyVm" class="img-circle img-responsive">
                   <font size="3">Fei-Fei Li</font>
                 </a>
               </div>
