--- a/challenge.html
+++ b/challenge.html
@@ -180,8 +180,8 @@
             For this first edition of BEHAVIOR, we provide a fully functional implementation in iGibson 2.0, a new version of our opensource simulation environment. iGibson 2.0 implements all necessary functionalities for the challenge such as object states (temperature, wetness level, cleanliness level, etc.) and sampling functionalities to facilitate development. We also provide the necessary datasets for the Challenge:
             <ul>
                 <li><b>iGibson 2.0 Dataset of Scenes:</b> New versions of the fully interactive scenes, more densely populated with objects.</li> 
-                <li><b>BEHAVIOR Object Dataset:</b> Dataset of object models annotated with physical and semantic properties. The 3D models are free to use within iGibson 2.0 for BEHAVIOR.</li>
-                <li><b>BEHAVIOR Dataset of Human Demonstrations:</b> To facilitate the development of solutions, we provide a dataset of human successfull executions of the activities in iGibson 2.0 using a virtual reality interface. Humans control the BEHAVIOR Robot embodiment. The dataset includes all state-action pairs and can be deterministically replayed.</li>
+                <li><b>BEHAVIOR Object Dataset:</b> Dataset of object models annotated with physical and semantic properties. The 3D models are free to use within iGibson 2.0 for BEHAVIOR. You can download a bundle of the iGibson2.0 dataset of scenes and the BEHAVIOR dataset of objects <a href="participation_bundle">here</a></li>
+                <li><b><a href="human_dataset">the BEHAVIOR Dataset of Human Demonstrations</a>:</b> To facilitate the development of solutions, we provide a dataset of human successfull executions of the activities in iGibson 2.0 using a virtual reality interface. Humans control the BEHAVIOR Robot embodiment. The dataset includes all state-action pairs and can be deterministically replayed.</li>
             </ul>
             <hr>
           </div>
@@ -194,7 +194,8 @@
         <div class="section-header">
           <div class="col-lg-12 col-md-12">
             <h2>Getting Started</h2>
-            Do you want to participate? Register in our EvalAI site and start downloading and installing the required infrastructure: <b>a new version of iGibson</b>, our simulation environment for interactive tasks, extended now to new object states for BEHAVIOR, <b>the BEHAVIOR Dataset of Objects</b>, with models to participate in the challenge, and <b>our starter code</b>, with examplest to train againts in the tasks.
+            Do you want to participate? Register in our <a href="https://eval.ai/web/challenges/challenge-page/1190">EvalAI site</a>
+             and start downloading and installing the required infrastructure: <a href="http://svl.stanford.edu/igibson/docs/installation.html">a new version of iGibson</a>, our simulation environment for interactive tasks, extended now to new object states for BEHAVIOR, the BEHAVIOR Dataset of Objects and the  iGibson2.0 Dataset of Scenes (combined in our <a href="participation_bundle">participation bundle</a>), with object and house models to participate in the challenge, and <a href="https://github.com/StanfordVL/BehaviorChallenge2021/">our starter code</a>, with examplest to train againts in the tasks. If you want to use human demonstrations to start developing your solutions, you can also download <a href="human_dataset">the BEHAVIOR Dataset of Human Demonstrations</a> in virtual reality.
             <hr>
           </div>
         </div>
