--- a/challenge.html
+++ b/challenge.html
@@ -68,7 +68,7 @@
             </p>
 
             <p class="section-description">
-              BEHAVIOR is a challenge where embodied agents make continuous full-body control decisions based on sensor information. Agents need to navigate and manipulate the environment with the goal of acomplishing 100 household activities. BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions.
+              BEHAVIOR is a challenge <b>in simulation</b> where embodied agents make continuous full-body control decisions based on sensor information. Agents need to navigate and manipulate the simulated environment with the goal of acomplishing 100 household activities (see <a href="media/mosaic_behavior.jpg">here</a> all the activities in pairs of simulated and real-world images). BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions, all with the reproducibility, safety and observability offered by a realistic physics simulation.
             </p>
 
             <p class="section-description">
@@ -90,7 +90,9 @@
               <div class="col-lg-4 col-md-12">
                 <div class="box2 intro">
                   <h4 class="title"><b>100 Common Household Activities</b></h4>
-                  <img src="media/beha.gif" width=210 height=210> </img>
+                  <a href="media/mosaic_behavior.jpg">
+                    <img src="media/beha.gif" width=210 height=210> </img>
+                  </a>
                 </div>
               </div>
               <div class="col-lg-4 col-md-12">
