changed png by jpg

--- a/challenge.html
+++ b/challenge.html
@@ -98,7 +98,7 @@
               <div class="col-lg-4 col-md-12">
                 <div class="box2 intro">
                   <h4 class="title"><b>Full Control based on Visual Input</b></h4>
-                  <img src="media/tpv.png" width=210 height=210> </img>
+                  <img src="media/tpv.jpg" width=210 height=210> </img>
                 </div>
               </div>
               <div class="col-lg-4 col-md-12">
