fix https issue

--- a/challenge.html
+++ b/challenge.html
@@ -35,7 +35,7 @@
     <div class="container">
       <div class="row">
         <div class="site-logo2">
-          <img height="45px" src="https://svl.stanford.edu//assets/images/c88c46b9e14bf897e57e597109c97005.png"> </img>
+          <img height="45px" src="http://svl.stanford.edu//assets/images/c88c46b9e14bf897e57e597109c97005.png"> </img>
           <a class="brand">BEHAVIOR Challenge @ ICCV 2021</a>
           <div>
             <a class="brand">
