--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<meta http-equiv="Refresh" content="0; url='challenge.html'" />
+<meta http-equiv="Refresh" content="0; url='http://svl.stanford.edu/behavior/challenge.html'" />
 
