--- a/challenge.html
+++ b/challenge.html
@@ -413,7 +413,7 @@
               <div class="col-xs-1 authornames">
                 <a href="https://engineering.stanford.edu/people/fei-fei-li" align="middle">
                   <img src="https://engineering.stanford.edu/sites/default/files/styles/large-square/public/9818d36da9c8e04dc45603a690b1e7ce.jpg?itok=s_I8jyVm" class="img-circle img-responsive">
-                  <font size="3">Fei-Fei Li</font>
+                  <font size="3">Li Fei-Fei</font>
                 </a>
               </div>
             </div>
