--- a/challenge.html
+++ b/challenge.html
@@ -354,7 +354,7 @@
                 </a>
               </div>
               <div class="col-xs-1 authornames">
-                <a href="" align="middle">
+                <a href="https://github.com/mjlbach/" align="middle">
                   <img src="https://pbs.twimg.com/profile_images/1291846610414997505/J5QTYSTN_400x400.jpg" class="img-circle img-responsive">
                   <font size="3">Michael Lingelbach</font>
                 </a>
