--- a/challenge.html
+++ b/challenge.html
@@ -380,7 +380,7 @@
                 </a>
               </div>
               <div class="col-xs-1 authornames">
-                <a href="" align="middle">
+                <a href="https://cs.stanford.edu/~shyamal" align="middle">
                   <img src="http://vision.stanford.edu/img/shyamal.jpg" class="img-circle img-responsive">
                   <font size="3">Shyamal Buch</font>
                 </a>
