--- a/challenge.html
+++ b/challenge.html
@@ -62,13 +62,13 @@
       <div class="row method-container">
         <div class="section-header">
           <div class="col-lg-12 col-md-12">
-			 <h4> <a href="https://docs.google.com/document/d/1u2m9Ld6Qo3eG-fvCzuAZN6lHxwpVVBlwLVdzo_WDlNI/edit?usp=sharing">[Participation Guidelines]</a> <a href="https://eval.ai/web/challenges/challenge-page/1190/overview">[Registration]</a>  <a href="https://github.com/StanfordVL/BehaviorChallenge2021">[Starter Code]</a> <a href="activity_list.html">[100 Activities]</a> </h4>
+			 <h4> <a href="https://docs.google.com/document/d/1u2m9Ld6Qo3eG-fvCzuAZN6lHxwpVVBlwLVdzo_WDlNI/edit?usp=sharing">[Participation Guidelines]</a> <a href="https://eval.ai/web/challenges/challenge-page/1190/overview">[Registration]</a>  <a href="https://github.com/StanfordVL/BehaviorChallenge2021">[Starter Code]</a> <a href="activity_list.html">[List of 100 Activities]</a> </h4>
             <p class="section-description">
               A primary goal of embodied AI research is to develop intelligent agents that can assist humans in their everyday lives in activities like washing dishes or cleaning floors. While recent years we have seen excellent new benchmarks that helped the field, they are usually restricted to a few tasks, short horizon or in simplified scenarios. Solving real-world challenges requires a new benchmark with realistic, diverse, and complex activities. We present BEHAVIOR, a benchmark with the 100 household activities that represent a new challenge for embodied AI solutions.
             </p>
 
             <p class="section-description">
-              BEHAVIOR is a challenge <b>in simulation</b> where embodied agents make continuous full-body control decisions based on sensor information. Agents need to navigate and manipulate the simulated environment with the goal of acomplishing 100 household activities (see <a href="media/mosaic_behavior.jpg">here</a> all the activities in pairs of simulated and real-world images). BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions, all with the reproducibility, safety and observability offered by a realistic physics simulation.
+              BEHAVIOR is a challenge <b>in simulation</b> where embodied agents make continuous full-body control decisions based on sensor information. Agents need to navigate and manipulate the simulated environment with the goal of acomplishing 100 household activities (see <a href="media/mosaic_behavior.jpg">here</a> all the activities in pairs of simulated and real-world images, or <a href="activity_list.html">here</a> for the complete list of activities). BEHAVIOR tests the ability to perceive the environment, plan, and execute complex long-horizon activities that involve multiple objects, rooms, and state transitions, all with the reproducibility, safety and observability offered by a realistic physics simulation.
             </p>
 
             <p class="section-description">
